Logo design complete.

--- a/src/template.html
+++ b/src/template.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href=".\logo.png">
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <a href="./" id="logo">
+                <span>S&</span>
+                <img src="./logo.png" alt="" width="100px">
+                <span>S</span>
+            </a>
+            <button>Home</button>
+            <button>Menu</button>
+            <button>About</button>
+        </nav>
+    </header>
+    <div id="content"></div>
 </body>
 </html>
