--- a/src/template.html
+++ b/src/template.html
@@ -12,13 +12,13 @@
             <a href="./" id="logo">
                 <span>S</span>
                 <span>&</span>
-                <img src="./logo.png" alt="" width="100px">
+                <img src="./logo.png" alt="">
                 <span>S</span>
             </a>
-            <button class="selected" onclick="displayHome()">Home</button>
-            <button onclick="displayMenu()">Menu</button>
-            <button onclick="displayAbout()">About</button>
-            <button onclick="displayContact()">Contact</button>
+            <button id="home" class="selected" onclick="displayHome()">Home</button>
+            <button id="menu" onclick="displayMenu()">Menu</button>
+            <button id="about" onclick="displayAbout()">About</button>
+            <button id="contact" onclick="displayContact()">Contact</button>
         </nav>
     </header>
     <div id="content"></div>
