Home page layout complete.

--- a/src/template.html
+++ b/src/template.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href=".\logo.png">
+    <link rel="icon" href="./images/logo.png">
     <title>Document</title>
 </head>
 <body>
@@ -12,7 +12,7 @@
             <a href="./" id="logo">
                 <span>S</span>
                 <span>&</span>
-                <img src="./logo.png" alt="">
+                <img src="./images/logo.png" alt="S&S logo">
                 <span>S</span>
             </a>
             <button id="home" class="selected" onclick="displayHome()">Home</button>
@@ -22,5 +22,8 @@
         </nav>
     </header>
     <div id="content"></div>
+    <footer>
+        <p>&copy; 2024 <a href="https://github.com/alowkii" target="_blank">@alowkii</a></p>
+    </footer>
 </body>
 </html>
